@@ -4,49 +4,46 @@ import com.example.supportdesk.dto.TicketResponse;
 import com.example.supportdesk.exception.NotFoundException;
 import com.example.supportdesk.model.Ticket;
 import com.example.supportdesk.repository.TicketRepository;
-import org.bson.types.ObjectId;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TicketService {
 
+    // 1. Inject the TicketRepository instead of using a local HashMap
     private final TicketRepository ticketRepository;
 
     public TicketService(TicketRepository ticketRepository) {
         this.ticketRepository = ticketRepository;
     }
 
+    // 2. Fetch all tickets from MongoDB and map them to TicketResponse DTOs
     public List<TicketResponse> getAllTickets() {
         return ticketRepository.findAll().stream()
-                .map(this::toResponse)
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
+    // 3. Fetch a single ticket by its ID from MongoDB
     public TicketResponse getTicketById(String id) {
-        ObjectId objectId;
-        try {
-            objectId = new ObjectId(id);
-        } catch (IllegalArgumentException ex) {
-            throw new NotFoundException("Ticket not found: " + id);
-        }
-
-        Ticket ticket = ticketRepository.findById(objectId)
+        Ticket ticket = ticketRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Ticket not found: " + id));
-        return toResponse(ticket);
+        return mapToResponse(ticket);
     }
 
-    private TicketResponse toResponse(Ticket t) {
+    // Helper method to cleanly map your MongoDB Entity (Ticket) to your DTO (TicketResponse)
+    private TicketResponse mapToResponse(Ticket ticket) {
         return new TicketResponse(
-                t.getId() != null ? t.getId().toHexString() : null,
-                t.getTitle(),
-                t.getDescription(),
-                t.getCategory(),
-                t.getPriority(),
-                t.getStatus(),
-                t.getCreatedBy(),
-                t.getCreatedAt()
+                ticket.getId(),
+                ticket.getTitle(),
+                ticket.getDescription(),
+                ticket.getCategory(),
+                ticket.getPriority(),
+                ticket.getStatus(),
+                ticket.getCreatedBy(),
+                ticket.getCreatedAt()
         );
     }
 }
